Fix some layout issues

--- a/app/sass/modules/_drawing.scss
+++ b/app/sass/modules/_drawing.scss
@@ -1,11 +1,10 @@
 .hangman {
-    max-height: 50vh;
     text-align: center;
     margin: 20px 0;
 }
 
 svg {
-    height: 100%;
+    height: 50vh;
 }
 
 .body {
